[package]
name = "serve-wasm"
version = "0.1.0"
edition = "2024"
description = "A simple, lightweight HTTP server for serving WebAssembly applications with the correct security headers."
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
